# Lanjun

./: .gitignore  README.md
docs/: index.html  main.33fc8f8554fb99fc.js  main.b75e00b9f98bcb95.js  (+3 more)
lanjun-be/: .env.sample  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yaml  logging.conf  pyproject.toml
lanjun-be/lanjun/: database.py  exceptions.py
lanjun-be/lanjun/actions/: items.py  orders.py  users.py
lanjun-be/lanjun/common/: logging.py  settings.py  sqlmodel_fields.py
lanjun-be/lanjun/domain/: enums.py  item.py  order.py  user.py
lanjun-be/lanjun/entities/: __init__.py  item.py  links.py  order.py  reservation.py  table.py  user.py
lanjun-be/lanjun/http_models/: requests.py  responses.py
lanjun-be/lanjun/repos/: item.py  order.py  user.py
lanjun-be/lanjun/server/: jwt_auth.py  main.py
lanjun-be/lanjun/server/middlewares/: log.py
lanjun-be/lanjun/server/routes/: auth.py  health.py  items.py  orders.py  tables.py  users.py
lanjun-be/migrations/: env.py
lanjun-be/migrations/versions/: 2023_02_13_2334-57023cf01b4a_init_db.py  2023_03_05_1555-5adca8522a1a_soft_delete_items.py  2023_03_05_1944-8cf609263523_simplify_db.py  2023_03_05_2232-6f397fa823b6_soft_delete_orders.py
lanjun-be/scripts/: create_admin.py  path.py
lanjun-be/tests/: conftest.py
lanjun-be/tests/integration/: conftest.py  test-docker-compose.yaml
lanjun-be/tests/integration/actions/: test_items.py
lanjun-be/tests/integration/repos/: test_item.py
lanjun-be/tests/integration/server/routes/: test_auth.py  test_items.py  test_orders.py  test_users.py
(+74 files in other folders)
